# agrimonitor

./: .gitignore  README.md  render.yaml
agrimonitor_backend/: .env.example  alembic.ini  pyproject.toml
agrimonitor_backend/alembic/: env.py  script.py.mako
agrimonitor_backend/alembic/versions/: 20260705_0001_initial_schema.py  20260708_0002_symptom_record_status.py  20260708_0003_sync_plot_status_from_symptoms.py  20260709_0004_add_labor_cost_to_activities.py  20260711_0005_remove_demo_market_prices.py  20260711_0006_replace_demo_crops.py
agrimonitor_backend/app/: main.py
agrimonitor_backend/app/api/: router.py
agrimonitor_backend/app/api/routes/: auth.py  dashboard.py  finance.py  health.py  market_prices.py  monitoring.py  recommendations.py
agrimonitor_backend/app/cli/: __init__.py  create_admin.py
agrimonitor_backend/app/core/: config.py  dependencies.py  enums.py  security.py
agrimonitor_backend/app/db/: base.py  database.py  seed.py  startup.py
agrimonitor_backend/app/models/: activity.py  alert.py  cost.py  crop.py  disease_rule.py  harvest.py  market_price.py  mixins.py  planting_record.py  symptom.py  symptom_record.py  user.py
agrimonitor_backend/app/schemas/: auth.py  dashboard.py  finance.py  market_price.py  monitoring.py  recommendation.py
agrimonitor_backend/app/services/: auth_service.py  dashboard_service.py  finance_service.py  login_protection.py  market_price_service.py  monitoring_service.py  recommendation_service.py
agrimonitor_backend/tests/: conftest.py  test_auth.py  test_config.py  test_create_admin_cli.py  test_database.py  test_health.py  test_login_protection_redis.py  test_ownership.py  test_registration_security.py  test_security.py  test_validation_and_csv.py
(+85 files in other folders)
