[project]
name = "agrimonitor-backend"
version = "0.1.0"
description = "FastAPI backend for AgriMonitor MVP"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.2.0",
    "alembic>=1.13.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt>=4.0.1,<5.0.0",
    "python-jose[cryptography]>=3.3.0",
    "pyasn1>=0.6.4",
    "email-validator>=2.2.0",
    "python-multipart>=0.0.9",
    "redis>=7.4.1,<9.0.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "fakeredis[lua]>=2.36.2,<3.0.0",
    "pytest>=8.0.0",
]

[build-system]
requires = ["setuptools>=68.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
